--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper & Scissors </title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fontdiner+Swanky&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="fontdiner-swanky-regular">
+    <h1>Rock, Paper, Scissors</h1>
+    <h2>Choose:</h1>
+<div class="gameboard">
+    <button class="fontdiner-swanky-regular">Rock</button>
+    <button class="fontdiner-swanky-regular">Paper</button>
+    <button class="fontdiner-swanky-regular">Scissors</button>
+</div>
     <script src="index.js"></script>
 </body>
 </html>
