--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Rock, Paper, Scissors</h1>
     <h2>Choose:</h1>
 <div class="gameboard">
-    <button class="fontdiner-swanky-regular">Rock</button>
-    <button class="fontdiner-swanky-regular">Paper</button>
-    <button class="fontdiner-swanky-regular">Scissors</button>
+    <button class="fontdiner-swanky-regular" id="rock">Rock</button>
+    <button class="fontdiner-swanky-regular" id="paper">Paper</button>
+    <button class="fontdiner-swanky-regular" id="scissors">Scissors</button>
 </div>
     <script src="index.js"></script>
 </body>
